# ChangeLog for dev-lang/julia
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Aug 2014; François Bissey <francois.bissey@canterbury.ac.nz>
  julia-9999.ebuild:
  Bump dependency on llvm as in 0.3

  27 Aug 2014; François Bissey <francois.bissey@canterbury.ac.nz>
  julia-9999.ebuild:
  Few fixes: julia wants threaded fftw; multilib-strict install; Added
  USE_BLAS64=0 to Make.user, some proprietary blas/lapack may be  suitable for
  the other setting but we cannot count on julia to recognize support just based
  on name.

  02 Apr 2014; Sebastien Fabbro <fabbros@gentoo.org> julia-9999.ebuild,
  metadata.xml:
  various consistent fixes for main tree

  08 Feb 2014;  <xhochy@gentoo.org> julia-9999.ebuild:
  PREFIX is now prefix

  26 Jan 2014;  <xhochy@gentoo.org> julia-9999.ebuild:
  Add missing dependency for utf8proc

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> julia-9999.ebuild, metadata.xml:
  Switch from git-2 to git-r3

  17 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> julia-9999.ebuild,
  metadata.xml:
  dev-lang/julia: Small fixes and cleanup, use system patchelf

  14 Jul 2013; James Cloos <cloos@jhcloos.com> julia-9999.ebuild:
  Julia uses submodules, so set EGIT_HAS_SUBMODULES=yes

  14 Jun 2013; Justin Lecher <jlec@gentoo.org> julia-9999.ebuild, metadata.xml:
  Drop KEYWORDS of live ebuilds

  19 Dec 2012; Guillaume Horel <guillaume.horel@gmail.com>
  +files/63julia-gentoo.el:
  Add emacs julia mode file

*julia-9999 (19 Dec 2012)

  19 Dec 2012; Guillaume Horel <guillaume.horel@gmail.com> +julia-9999.ebuild,
  +metadata.xml:
  Initial import. Ebuild written with help from Nicolas Bigaouette and 
  Sébastien Fabbro.